[package]
name = "rakceptor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.60"
tokio = { version = "1.28.2", features = ["full"] }
