[package]
name = "antiquarian"
version = "0.1.0"
edition = "2021"
authors = ["Maciej Rak <maciejrak@protonmail.com>"]
license = "MIT"

keywords = [
    "security",
    "interceptor",
    "api",
    "record",
    "requests",
    "http",
    "burp",
    "proxy",
    "webservice",
]
categories = ["security-research", "api-tools", "web-development", "testing"]
description = "A self-hosted tool to capture and inspect incoming HTTP requests for security research within private networks."

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.60"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }
